--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,11 +81,8 @@ dependencies {
     androidTestImplementation platform('androidx.compose:compose-bom:2023.03.00')
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
 
-    def camerax_version = "1.0.0-beta05"
-    implementation "androidx.camera:camera-camera2:${camerax_version}"
-    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
-    implementation "androidx.camera:camera-view:1.0.0-alpha12"
-    implementation "androidx.camera:camera-extensions:1.0.0-alpha12"
+    implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
+
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 }
